feat: add DeepMIMO support and third-party dataset license disclaimers
- Add CSISignal class for complex-valued CSI data
- Refactor DeepMIMO dataset with dynamic scenario discovery and official API
- Add license disclaimer to README files (small text under dataset table)
- Add #licenses section to docs/datasets.html and datasets_zh.html
- Add deepmimo optional dependency in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,9 @@ vision = [
     "torchvision>=0.11.0",
     "opencv-python>=4.5.0",
 ]
+deepmimo = [
+    "DeepMIMO>=4.0.0b5",  # 注意: 需要 Python >= 3.10
+]
 full = [
     "torchvision>=0.11.0",
     "opencv-python>=4.5.0",
